# FleetManager

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DOCUMENTATION_PLAN.md  README.md  ROADMAP.md  deploy_windows.sh  ui_mock__opus.html  Методичка.md  Чеклист.md
plans/: data_model_analysis.md  extended_data_model.md  state_management_analysis.md
src/: CMakeLists.txt  main.cpp
src/database/: FleetDatabase.cpp  FleetDatabase.h
src/models/: Machine.cpp  Machine.h  Money.cpp  Money.h  Project.cpp  Project.h
src/ui/: AssignMachineDialog.cpp  AssignMachineDialog.h  AssignMachineDialog.ui  DatabaseSetupDialog.cpp  DatabaseSetupDialog.h  MachineDialog.cpp  MachineDialog.h  MachineDialog.ui  MachineTableModel.cpp  MachineTableModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProjectDialog.cpp  ProjectDialog.h  ProjectDialog.ui  ProjectTableModel.cpp  ProjectTableModel.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
